--- a/app/src/main/res/drawable/state_pressed_orange.xml
+++ b/app/src/main/res/drawable/state_pressed_orange.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#F5F5F5">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/colorPoint">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="@color/colorPoint"/>
             <corners
                 android:topLeftRadius="10dp"
                 android:topRightRadius="10dp"
                 android:bottomLeftRadius="10dp"
                 android:bottomRightRadius="10dp"/>
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/colorPoint"/>
         </shape>
-        <color android:color="#F5F5F5"/>
+        <color android:color="#FB9047"/>
     </item>
 </ripple>
