--- a/app/src/main/res/layout/activity_certification_u.xml
+++ b/app/src/main/res/layout/activity_certification_u.xml
@@ -115,7 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="26dp"
-                android:text="*인증이 완료된 회원만이 야미구 미팅을 할 수 있어요"
+                android:text="*학생증 정보는 실명, 학교, 학과 등 입력한 정보와 동일한지 확인해요."
                 android:textColor="@color/colorNonselect"
                 android:textSize="12dp"
                 android:gravity="center_horizontal"
@@ -125,7 +125,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5.7dp"
-                android:text="*인증은 최대 12시간까지 소요돼요."
+                android:text="*인증이 완료된 회원만이 야미구를 할 수 있어요"
                 android:textColor="@color/colorNonselect"
                 android:textSize="12dp"
                 android:gravity="center_horizontal"
@@ -135,7 +135,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5.7dp"
-                android:text="*학생증 개인정보는 인증 후 모두 파기됩니다."
+                android:text="*학생증위조는 사문서부정행사죄가 적용돼요."
                 android:textColor="@color/colorNonselect"
                 android:textSize="12dp"
                 android:gravity="center_horizontal"
@@ -145,7 +145,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5.7dp"
-                android:text="*학생증위조는 사문서부정행사죄가 적용돼요. "
+                android:text="*인증은 최대 24시간까지 소요돼요."
                 android:textColor="@color/colorNonselect"
                 android:textSize="12dp"
                 android:gravity="center_horizontal"
@@ -163,7 +163,7 @@
                     android:background="@drawable/state_pressed_orange"
                     android:text="바로 미팅하러 가기"
                     android:textSize="14dp"
-                    android:textColor="@color/colorPoint"
+                    android:textColor="@color/colorPrimary"
                     style="?android:attr/borderlessButtonStyle"/>
                 <TextView
                     android:id="@+id/btn_skip"
