--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -187,7 +187,7 @@
                 android:id="@+id/et_nickname"
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
-                android:hint="자신의 개성을 표현해주세요!"
+                android:hint="영문 12글자, 한글 6글자까지 가능!"
                 android:textSize="12dp"
                 android:background="@drawable/edittext_signup"
                 android:gravity="center_vertical"
@@ -241,18 +241,19 @@
                 android:orientation="horizontal"
                 android:weightSum="100"
                 android:layout_marginTop="6.1dp">
+
                 <Button
                     android:id="@+id/btn_select_student"
+                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="42dp"
                     android:layout_weight="48"
                     android:background="@drawable/state_pressed_gray"
+                    android:fontFamily="@font/roboto_font_family"
                     android:text="대학생"
                     android:textColor="@color/colorHint"
-                    android:textSize="12dp"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:fontFamily="@font/roboto_font_family"
-                    />
+                    android:textSize="12dp" />
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="42dp"
@@ -287,7 +288,7 @@
                 android:background="@drawable/state_pressed_orange"
                 android:text="인증하기"
                 android:textSize="14dp"
-                android:textColor="@color/colorPoint"
+                android:textColor="@color/colorPrimary"
                 style="?android:attr/borderlessButtonStyle"
                 android:fontFamily="@font/roboto_font_family"
                 />
