--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -91,7 +91,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/state_pressed_blue"
                     android:text="휴대폰으로 본인 인증하기"
-                    android:textColor="#32A4E0"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14dp"
                     android:layout_gravity="center_horizontal"
                     style="?android:attr/borderlessButtonStyle"
