--- a/app/src/main/res/layout/activity_certification_u.xml
+++ b/app/src/main/res/layout/activity_certification_u.xml
@@ -108,6 +108,7 @@
                     android:id="@+id/selected_img"
                     android:layout_width="126.4dp"
                     android:layout_height="80dp"
+                    android:scaleType="fitXY"
                     android:visibility="gone"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:src="@drawable/default_cert_card"/>
