--- a/app/src/main/res/layout/activity_meeting_application.xml
+++ b/app/src/main/res/layout/activity_meeting_application.xml
@@ -124,41 +124,66 @@
                     />
                 <LinearLayout
                     android:id="@+id/select_pane_type"
-                    android:layout_width="match_parent"
+                    android:layout_width="387dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
-                    android:orientation="vertical">
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:background="@drawable/shadow_box">
                     <Button
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:padding="0dp"
                         android:id="@+id/btn_select_2vs2"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="62dp"
-                        android:background="@drawable/button_background_non_select"
+                        android:background="@null"
                         android:text="2:2 소개팅"
                         android:gravity="center"
                         android:fontFamily="@font/nanumgothic_font_family"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_3vs3"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="62dp"
-                        android:background="@drawable/button_background_non_select"
+                        android:background="@null"
                         android:text="3:3 미팅"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_4vs4"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="62dp"
-                        android:background="@drawable/button_background_non_select"
+                        android:background="@null"
                         android:text="4:4 미팅"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
                 </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="친구와 함께 하는 야미구"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/nanumgothic_font_family"
+                    android:textSize="14dp"
+                    android:textColor="@color/colorNonselect">
+                </TextView>
             </LinearLayout>
 
             <LinearLayout
@@ -177,89 +202,129 @@
                     />
                 <LinearLayout
                     android:id="@+id/select_pane_when"
-                    android:layout_width="match_parent"
+                    android:layout_width="387dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
+                    android:layout_gravity="center_horizontal"
                     android:orientation="vertical"
-                    >
+                    android:background="@drawable/shadow_box">
                     <Button
                         android:id="@+id/btn_select_date1"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="55dp"
-                        android:background="@drawable/button_date_non_select_white"
+                        android:background="@null"
                         android:text="5월 28일"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_date2"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="55dp"
-                        android:background="@drawable/button_date_non_select_white"
+                        android:background="@null"
                         android:text="5월 29일"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_date3"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="55dp"
-                        android:background="@drawable/button_date_non_select_white"
+                        android:background="@null"
                         android:text="5월 30일"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_date4"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="55dp"
-                        android:background="@drawable/button_date_non_select_white"
+                        android:background="@null"
                         android:text="5월 31일"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_date5"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="55dp"
-                        android:background="@drawable/button_date_non_select_white"
+                        android:background="@null"
                         android:text="6월 1일"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_date6"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="55dp"
-                        android:background="@drawable/button_date_non_select_white"
+                        android:background="@null"
                         android:text="6월 2일"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_date7"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="55dp"
-                        android:background="@drawable/button_date_non_select_white"
+                        android:background="@null"
                         android:text="6월 3일"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
                 </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일주일 이내의 날짜만 선택 가능"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/nanumgothic_font_family"
+                    android:textSize="14dp"
+                    android:textColor="@color/colorNonselect">
+                </TextView>
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/place_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-
                 >
                 <ImageView
                     android:id="@+id/question_where"
@@ -271,49 +336,71 @@
                     />
                 <LinearLayout
                     android:id="@+id/select_pane_where"
-                    android:layout_width="match_parent"
+                    android:layout_width="387dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
+                    android:layout_gravity="center_horizontal"
                     android:orientation="vertical"
+                    android:background="@drawable/shadow_box"
                     >
                     <Button
                         android:id="@+id/btn_select_place1"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="62dp"
-                        android:background="@drawable/button_background_non_select"
+                        android:background="@null"
                         android:text="신촌/홍대"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_place2"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="62dp"
-                        android:background="@drawable/button_background_non_select"
+                        android:background="@null"
                         android:text="건대/왕십리"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#D9D9D9"
+                        ></LinearLayout>
                     <Button
                         android:id="@+id/btn_select_place3"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="379dp"
                         android:layout_height="62dp"
-                        android:background="@drawable/button_background_non_select"
+                        android:background="@null"
                         android:text="강남"
                         android:fontFamily="@font/nanumgothic_font_family"
                         android:gravity="center"
                         />
                 </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="타 지역은 추후 업데이트 예정"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/nanumgothic_font_family"
+                    android:textSize="14dp"
+                    android:textColor="@color/colorNonselect">
+                </TextView>
             </LinearLayout>
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:id="@+id/appeal_view"
                     android:orientation="vertical">
                     <ImageView
@@ -328,43 +415,55 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-                        <EditText
-                            android:id="@+id/edittext_appeal"
-                            android:layout_width="379dp"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/textbox_appeal"
-                            android:layout_marginTop="7dp"
-                            android:layout_gravity="center"
-                            android:gravity="top"
-                            android:paddingLeft="28dp"
-                            android:paddingRight="28dp"
-                            android:paddingTop="19dp"
-                            android:paddingBottom="19dp"
-                            android:fontFamily="@font/nanumgothic_font_family"
-                            />
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="273dp"
+                            android:layout_gravity="center_horizontal"
+                            >
+                            <EditText
+                                android:id="@+id/edittext_appeal"
+                                android:layout_width="379dp"
+                                android:layout_height="268dp"
+                                android:background="@drawable/shadow_box"
+                                android:layout_marginTop="7dp"
+                                android:gravity="top"
+                                android:paddingLeft="15dp"
+                                android:paddingRight="15dp"
+                                android:paddingTop="15dp"
+                                android:paddingBottom="28dp"
+                                android:fontFamily="@font/nanumgothic_font_family"
+                                android:hint="키, 학력, 나이, 친구들 스타일 등 모든 것을 자랑하세요!"
+                                android:textColorHint="@color/colorHint"
+                                android:textSize="14dp"
+                                android:textColor="@color/colorBlack"
+                                />
+                            <TextView
+                                android:id="@+id/max_appeal_length"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right|bottom"
+                                android:layout_marginRight="15dp"
+                                android:layout_marginBottom="13dp"
+                                android:text="0 / 100"
+                                android:fontFamily="@font/nanumgothic_font_family"
+                                android:textColor="@color/colorHint"
+
+                                />
+                        </FrameLayout>
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
                             android:text="개인 연락처(전화번호, 카톡, 이메일 등) 입력 불가"
-                            android:fontFamily="@font/nanumgothic_font_family"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="18dp"/>
+                            android:layout_marginTop="15dp"
+                            android:fontFamily="@font/nanumgothic_font_family"
+                            android:textSize="14dp"
+                            android:textColor="@color/colorNonselect">
+                        </TextView>
                     </LinearLayout>
                 </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <TextView
-                        android:id="@+id/max_appeal_length"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="30dp"
-                        android:layout_marginTop="305dp"
-                        android:fontFamily="@font/nanumgothic_font_family"
-                        />
-                        android:textColor="#444444"
-                </RelativeLayout>
             </FrameLayout>
 
 
