--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="295dp"
+    android:layout_width="333.36dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
-    android:background="@drawable/rounded_orange_solid2"
+    android:background="@drawable/matching_dialog_bg"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/dialog_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="25.6dp"
         android:gravity="center"
         android:textSize="25dp"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorPrimary"
         android:text="매칭 완료!"
         android:fontFamily="@font/nanumgothic_font_family"/>
+    <LinearLayout
+        android:layout_width="304dp"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="2.5dp"
+        >
+    </LinearLayout>
     <TextView
         android:id="@+id/dialog_text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7.4dp"
+        android:layout_marginTop="14.5dp"
         android:gravity="center"
         android:textSize="14dp"
-        android:textColor="@color/colorPoint"
-        android:text="윤용섭님,"
+        android:textColor="@color/colorPrimary"
+        android:text="윤용섭 님,"
         android:fontFamily="@font/nanumgothic_font_family"/>
     <TextView
         android:id="@+id/dialog_text2"
@@ -33,8 +40,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="14dp"
-        android:textColor="@color/colorPoint"
-        android:text="야미구에서"
+        android:textColor="@color/colorPrimary"
+        android:text="야미구에서의 3번째 만남이"
         android:fontFamily="@font/nanumgothic_font_family"/>
     <TextView
         android:id="@+id/dialog_text3"
@@ -42,8 +49,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="14dp"
-        android:textColor="@color/colorPoint"
-        android:text="3번째 미팅도 재밌게 하세요!"
+        android:textColor="@color/colorPrimary"
+        android:text="좋은 인연으로 이어지길 바랍니다!"
         android:layout_marginBottom="34dp"
         android:fontFamily="@font/nanumgothic_font_family"/>
 </LinearLayout>
