--- a/app/src/main/res/layout/fragment_filter_set.xml
+++ b/app/src/main/res/layout/fragment_filter_set.xml
@@ -2,13 +2,13 @@
 <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/filter_fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="424dp"
+    android:layout_height="415dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="424dp"
+        android:layout_height="415dp"
         android:layout_gravity="bottom"
         android:background="@color/colorPrimary"
         >
@@ -19,14 +19,14 @@
             android:text="필터 설정하기"
             android:textColor="#000000"
             android:layout_marginLeft="19dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="44dp"
             android:fontFamily="@font/roboto_font_family">
         </TextView>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="31dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="12dp"
             android:text="인원"
             android:textColor="#000000"
             android:textSize="20dp"
@@ -39,25 +39,23 @@
             android:layout_marginTop="7dp">
             <Button
                 android:id="@+id/btn_type_2vs2"
-                android:layout_width="wrap_content"
+                android:layout_width="99dp"
                 android:layout_height="30dp"
-                android:background="@drawable/rounded_gray_solid"
+                android:background="@drawable/rounded_gray_full"
                 android:text="2:2 소개팅"
                 android:textSize="12dp"
-                android:layout_weight="99"
-                android:textColor="@color/colorNonselect"
+                android:textColor="@color/colorPrimary"
                 android:fontFamily="@font/roboto_font_family"
                 >
             </Button>
             <Button
                 android:id="@+id/btn_type_3vs3"
-                android:layout_width="wrap_content"
+                android:layout_width="99dp"
                 android:layout_height="30dp"
-                android:background="@drawable/rounded_gray_solid"
+                android:background="@drawable/rounded_gray_full"
                 android:text="3:3 미팅"
                 android:textSize="12dp"
-                android:layout_weight="99"
-                android:textColor="@color/colorHint"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginLeft="23dp"
                 android:layout_marginRight="23dp"
                 android:fontFamily="@font/roboto_font_family"
@@ -65,13 +63,12 @@
             </Button>
             <Button
                 android:id="@+id/btn_type_4vs4"
-                android:layout_width="wrap_content"
+                android:layout_width="99dp"
                 android:layout_height="30dp"
-                android:background="@drawable/rounded_gray_solid"
+                android:background="@drawable/rounded_gray_full"
                 android:text="4:4 미팅"
                 android:textSize="12dp"
-                android:layout_weight="99"
-                android:textColor="@color/colorHint"
+                android:textColor="@color/colorPrimary"
                 android:fontFamily="@font/roboto_font_family"
                 >
             </Button>
@@ -80,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="31dp"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="13dp"
             android:text="장소"
             android:textColor="#000000"
             android:textSize="20dp"
@@ -94,26 +91,24 @@
             android:layout_marginTop="7dp">
             <Button
                 android:id="@+id/btn_place_1"
-                android:layout_width="wrap_content"
+                android:layout_width="99dp"
                 android:layout_height="30dp"
-                android:background="@drawable/rounded_gray_solid"
+                android:background="@drawable/rounded_gray_full"
                 android:text="신촌/홍대"
                 android:textSize="12dp"
-                android:layout_weight="99"
-                android:textColor="@color/colorHint"
+                android:textColor="@color/colorPrimary"
                 android:fontFamily="@font/roboto_font_family"
 
                 >
             </Button>
             <Button
                 android:id="@+id/btn_place_2"
-                android:layout_width="wrap_content"
+                android:layout_width="99dp"
                 android:layout_height="30dp"
-                android:background="@drawable/rounded_gray_solid"
+                android:background="@drawable/rounded_gray_full"
                 android:text="건대/왕십리"
                 android:textSize="12dp"
-                android:layout_weight="99"
-                android:textColor="@color/colorHint"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginLeft="23dp"
                 android:layout_marginRight="23dp"
                 android:fontFamily="@font/roboto_font_family"
@@ -121,13 +116,12 @@
             </Button>
             <Button
                 android:id="@+id/btn_place_3"
-                android:layout_width="wrap_content"
+                android:layout_width="99dp"
                 android:layout_height="30dp"
-                android:background="@drawable/rounded_gray_solid"
+                android:background="@drawable/rounded_gray_full"
                 android:text="강남"
                 android:textSize="12dp"
-                android:layout_weight="99"
-                android:textColor="@color/colorHint"
+                android:textColor="@color/colorPrimary"
                 android:fontFamily="@font/roboto_font_family"
                 >
             </Button>
@@ -136,7 +130,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="31dp"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="13dp"
             android:text="나이"
             android:textColor="#000000"
             android:textSize="20dp"
@@ -148,7 +142,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="7dp">
+            android:layout_marginTop="0dp">
             <FrameLayout
                 android:layout_width="340dp"
                 android:layout_height="42dp"
