--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -58,11 +59,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            app:nickname="김찬열"
             app:age="24"
             app:company="연세대학교"
-            app:department="전기전자공학부">
-        </com.yamigu.yamigu_app.CustomLayout.ProfileCard>
+            app:department="전기전자공학부"
+            app:nickname="김찬열"></com.yamigu.yamigu_app.CustomLayout.ProfileCard>
+
         <com.yamigu.yamigu_app.CustomLayout.InviteFriends
             android:id="@+id/invite_friend"
             android:layout_width="match_parent"
