--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#F1F1F1">
 
 
 <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="#F1F1F1"
         >
         <FrameLayout
             android:layout_width="match_parent"
@@ -51,7 +53,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#F1F1F1">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -126,30 +129,34 @@
                 </LinearLayout>
                 <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard
                     android:id="@+id/mmc_1"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
+                    android:layout_gravity="center_horizontal"
                     app:label="1"
                     app:place="건대/왕십리"
                     app:noa="2"
                     app:month="5월"
                     app:date="28일"
                     app:dday="Today"
+
                     >
                 </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard>
                 <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat
                     android:id="@+id/mmc_c_1"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     app:chat="오늘 재밌게 놀아요~"
                     app:unread="2"
                     app:time="오후 2:22">
                 </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat>
                 <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard
                     android:id="@+id/mmc_2"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
+                    android:layout_gravity="center_horizontal"
                     app:label="1"
                     app:place="건대/왕십리"
                     app:noa="2"
@@ -160,17 +167,19 @@
                 </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard>
                 <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat
                     android:id="@+id/mmc_c_2"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     app:chat="오늘 재밌게 놀아요~"
                     app:unread="2"
                     app:time="오후 2:22">
                 </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat>
                 <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard
                     android:id="@+id/mmc_3"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
+                    android:layout_gravity="center_horizontal"
                     app:label="1"
                     app:place="건대/왕십리"
                     app:noa="2"
@@ -181,19 +190,21 @@
                 </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard>
                 <com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat
                     android:id="@+id/mmc_c_3"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     app:chat="오늘 재밌게 놀아요~"
                     app:unread="2"
                     app:time="오후 2:22">
                 </com.yamigu.yamigu_app.CustomLayout.MyMeetingCard_Chat>
                 <TextView
+                    android:id="@+id/tv_recommendation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
                     android:layout_marginLeft="34dp"
                     android:layout_marginBottom="4dp"
-                    android:text="야미구 추천 미팅"
+                    android:text="subbus님을 위한 추천 미팅"
                     android:fontFamily="@font/nanumgothic_font_family"
                     android:textSize="18dp"
                     android:textColor="@color/colorNormal"
@@ -249,53 +260,6 @@
                                 app:profile2="전기전자공학부"></com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard>
                         </LinearLayout>
                     </HorizontalScrollView>
-                </FrameLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="오늘 예정 미팅"
-                    android:layout_marginLeft="34dp"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginTop="17dp"
-                    android:textColor="@color/colorNormal"
-                    android:textSize="18dp"
-                    android:fontFamily="@font/nanumgothic_font_family"/>
-                <!--ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/orange_point_bar"
-                    android:layout_marginLeft="34dp"
-                    android:layout_marginTop="6dp"
-                    android:scaleType="fitStart"
-                    /-->
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <com.yamigu.yamigu_app.CustomLayout.TodayScheduledTeamCard
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|center_horizontal"
-                            android:layout_marginBottom="-18dp"
-                            app:place="신촌/홍대"
-                            app:man="연세대학교 24살"
-                            app:woman="이화여자대학교 21살"
-                            >
-                        </com.yamigu.yamigu_app.CustomLayout.TodayScheduledTeamCard>
-                        <com.yamigu.yamigu_app.CustomLayout.TodayScheduledTeamCard
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|center_horizontal"
-                            app:place="건대/왕십리"
-                            app:man="고려대학교 22살"
-                            app:woman="연세대학교 22살"
-                            >
-                        </com.yamigu.yamigu_app.CustomLayout.TodayScheduledTeamCard>
-                    </LinearLayout>
                 </FrameLayout>
             </LinearLayout>
     </ScrollView>
