--- a/app/src/main/res/layout/my_meeting_card_chat.xml
+++ b/app/src/main/res/layout/my_meeting_card_chat.xml
@@ -3,8 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bg"
     android:layout_height="44dp"
-    android:layout_width="match_parent"
-    android:background="@drawable/meeting_card_chat_bg">
+    android:layout_width="350dp"
+    android:background="@drawable/meeting_card_chat_bg"
+    >
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
