--- a/app/src/main/res/drawable/label_2vs2_bg.xml
+++ b/app/src/main/res/drawable/label_2vs2_bg.xml
@@ -1,10 +1,15 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPoint"/>
-    <corners
-        android:topLeftRadius="4dp"
-        android:topRightRadius="4dp"
-        android:bottomLeftRadius="4dp"
-        android:bottomRightRadius="4dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- This is the line -->
+    <item>
+        <shape>
+            <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="3dp"/>
+            <solid android:color="@color/colorPoint" />
+        </shape>
+    </item>
+    <!-- This is the main color -->
+    <item>
+        <shape>
+            <solid android:color="@color/colorPrimary" />
+        </shape>
+    </item>
+</layer-list>
