--- a/app/src/main/res/drawable/top_rounded_4vs4.xml
+++ b/app/src/main/res/drawable/top_rounded_4vs4.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFE2CE"/>
-    <stroke android:width="0.5dp" android:color="#FF7B22" />
-
+    <solid android:color="#FFFFFF"/>
+    <stroke android:width="1dp" android:color="@color/color4vs4" />
+    <corners
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
