--- a/app/src/main/res/drawable/top_rounded_matched.xml
+++ b/app/src/main/res/drawable/top_rounded_matched.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFE2CE"/>
-    <stroke android:width="0.5dp" android:color="#FF7B22" />
-
+    <solid android:color="#FFF9F6"/>
+    <corners
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
