--- a/app/src/main/res/drawable/top_rounded_orange.xml
+++ b/app/src/main/res/drawable/top_rounded_orange.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#FFFFFF"/>
-<stroke android:width="1dp" android:color="#E0E0E0" />
+<solid android:color="#FFF9F6"/>
 <corners
     android:topLeftRadius="10dp"
     android:topRightRadius="10dp"/>
