--- a/app/src/main/res/layout/meeting_team_home.xml
+++ b/app/src/main/res/layout/meeting_team_home.xml
@@ -2,128 +2,170 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bg"
-    android:layout_height="222dp"
-    android:layout_width="293dp"
-    android:orientation="vertical">
-    <LinearLayout
+    android:layout_height="209dp"
+    android:layout_width="351.8dp"
+    android:orientation="vertical"
+    android:layout_gravity="center_horizontal"
+    android:layout_marginBottom="21dp"
+    >
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="166dp"
-        android:orientation="vertical"
-        android:background="@drawable/top_rounded">
-        <TextView
-            android:id="@+id/label"
-            android:background="@drawable/label_2vs2_bg"
-            android:layout_width="99dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="7dp"
-            android:textColor="@color/colorPrimary"
-            android:text="2:2 소개팅"
-            android:textSize="12dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:fontFamily="@font/roboto_font_family">
-        </TextView>
-        <LinearLayout
+        android:layout_height="match_parent">
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="102.6dp">
-            <WebView
-                android:id="@+id/description"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:gravity="left|center_vertical"
-                android:scrollbars="none">
-            </WebView>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="9.4dp"
-            >
-            <TextView
-                android:id="@+id/rating"
+            android:layout_height="44dp"
+            android:layout_gravity="bottom">
+
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="★★☆☆☆"
-                android:gravity="center_horizontal|center_vertical"
-                android:textColor="#FF8424"
-                android:fontFamily="@font/roboto_font_family"/>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/point_line"
-            android:layout_height="5dp"
-            android:layout_width="match_parent"
-            android:background="@color/colorPoint">
-        </ImageView>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal"
-            android:background="@drawable/bottom_rounded_brown"
-            >
-            <LinearLayout
-                android:layout_width="127.5dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginTop="4.5dp"
-                android:layout_marginBottom="11dp"
-                android:layout_marginLeft="19dp">
-                <TextView
-                    android:id="@+id/profile1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="연세대학교 (24)"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/roboto_font_family"
-                    />
-                <TextView
-                    android:id="@+id/profile2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="전기전자공학부"
-                    android:textSize="12dp"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_marginTop="1dp"
-                    android:fontFamily="@font/roboto_font_family"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="127.5dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginTop="4.5dp"
-                android:layout_marginBottom="11dp"
-                android:layout_marginRight="19dp">
-                <TextView
-                    android:id="@+id/date"
+                android:layout_height="44dp"
+                android:orientation="vertical">
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:text="5월28일"
-                    android:textSize="12dp"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_height="44dp"
+                    android:layout_gravity="bottom"
+                    android:background="@drawable/bottom_rounded_brown"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/profile1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:fontFamily="@font/roboto_font_family"
+                        android:text="subbus (24)"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="14dp" />
+
+                    <TextView
+                        android:id="@+id/profile2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="16dp"
+                        android:fontFamily="@font/roboto_font_family"
+                        android:text="연세대학교, 전기전자공학부"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="14dp" />
+                </RelativeLayout>
+                <ImageView
+                    android:id="@+id/point_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="4dp"
+                    android:background="@color/colorPoint">
+
+                </ImageView>
+            </FrameLayout>
+        </FrameLayout>
+        <RelativeLayout
+            android:id="@+id/rl_applying"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@drawable/bottom_rounded_orange"
+            android:visibility="invisible"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="44dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="미팅 신청하기"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:textSize="14dp"
+                android:layout_marginBottom="5dp"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/top_bg"
+            android:layout_width="match_parent"
+            android:layout_height="165dp"
+            android:background="@drawable/top_rounded_with_orange_line"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/label"
+                    android:layout_width="99dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/label_2vs2_bg"
                     android:fontFamily="@font/roboto_font_family"
-                    />
+                    android:gravity="center_vertical|center_horizontal"
+                    android:text="2:2 미팅"
+                    android:textColor="@color/colorPoint"
+                    android:textSize="12dp"></TextView>
+
                 <TextView
                     android:id="@+id/place"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:text="신촌/홍대"
-                    android:textSize="12dp"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_width="99dp"
+                    android:layout_height="24dp"
+                    android:layout_marginLeft="13dp"
+                    android:background="@drawable/label_2vs2_bg"
                     android:fontFamily="@font/roboto_font_family"
-                    android:layout_marginTop="1dp"/>
+                    android:gravity="center_vertical|center_horizontal"
+                    android:text="신촌/홍대"
+                    android:textColor="@color/colorPoint"
+                    android:textSize="12dp"></TextView>
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="99dp"
+                    android:layout_height="24dp"
+                    android:layout_marginLeft="13dp"
+                    android:background="@drawable/label_2vs2_bg"
+                    android:fontFamily="@font/roboto_font_family"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:text="11월 30일 (토)"
+                    android:textColor="@color/colorPoint"
+                    android:textSize="12dp"></TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="95dp"
+                android:layout_marginTop="22dp"
+                android:weightSum="10">
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3">
+
+                    <com.yamigu.yamigu_app.CustomLayout.CircularImageView
+                        android:id="@+id/iv_profile"
+                        android:layout_width="92dp"
+                        android:layout_height="92dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="9dp"
+                        android:src="@drawable/user_profile_no_img" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="7">
+
+                    <WebView
+                        android:id="@+id/description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="18dp"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="left|center_vertical"
+                        android:scrollbars="none"></WebView>
+                </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-
+    </FrameLayout>
 </LinearLayout>
