--- a/app/src/main/res/layout/my_meeting_card.xml
+++ b/app/src/main/res/layout/my_meeting_card.xml
@@ -2,225 +2,154 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bg"
-    android:layout_height="166dp"
-    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_width="350dp"
     android:orientation="vertical"
-    android:background="@drawable/top_rounded">
+    android:background="@drawable/rounded_clean"
+    android:layout_gravity="center_horizontal">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="25dp"
-            >
+            android:layout_alignParentLeft="true"
+            android:orientation="vertical">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:orientation="vertical">
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/point_line1"
+                    android:layout_width="4dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/point_line_2vs2">
+                </ImageView>
                 <TextView
                     android:id="@+id/label"
-                    android:background="@drawable/label_2vs2_bg"
-                    android:layout_width="99dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="24dp"
-                    android:text="2:2 소개팅"
-                    android:textColor="@color/colorPrimary"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:textSize="16dp"
-                    android:fontFamily="@font/roboto_font_family"
-                    >
+                    android:text="2:2 미팅"
+                    android:textColor="@color/colorBlack"
+                    android:layout_marginLeft="8dp"
+                    android:gravity="center_vertical"
+                    android:textSize="18dp"
+                    android:fontFamily="@font/nanumgothic_font_family">
                 </TextView>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="3dp"
-                    >
-                    <TextView
-                        android:id="@+id/label_matching_completed"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="매칭 완료!"
-                        android:textColor="@color/colorPoint"
-                        android:textSize="21dp"
-                        android:visibility="invisible"/>
-                    <TextView
-                        android:id="@+id/place"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="30dp"
-                        android:text="건대/왕십리"
-                        android:layout_marginTop="-5dp"
-                        android:textColor="@color/colorBlack"
-                        android:textStyle="bold"
-                        android:fontFamily="@font/binggrae_font_family"/>
-                </LinearLayout>
             </LinearLayout>
-
-
             <LinearLayout
-                android:id="@+id/right_pane"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:id="@+id/btn_edit_card"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="17dp"
-                    >
-                    <ImageView
-                        android:id="@+id/icon_edit_card"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/icon_edit"
-                        android:layout_gravity="bottom"
-                        />
-                    <TextView
-                        android:id="@+id/text_edit_card"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="신청내역 수정하기"
-                        android:textColor="@color/colorPoint"
-                        android:gravity="center_vertical"
-                        android:fontFamily="@font/binggrae_font_family"
-                        />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="83.6dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_horizontal"
-                    >
-                    <TextView
-                        android:id="@+id/month"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/cal_month_2vs2"
-                        android:text="5월"
-                        android:textColor="@color/colorPrimary"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:textSize="13dp"
-                        android:fontFamily="@font/binggrae_font_family"
-                        android:textStyle="bold"/>
-                    <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/date"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/cal_date"
-                            android:gravity="center_horizontal|center_vertical"
-                            android:text="28일"
-                            android:textColor="@color/colorBlack"
-                            android:textSize="30dp"
-                            android:fontFamily="@font/binggrae_font_family"
-                            android:textStyle="bold"/>
-                        <TextView
-                            android:id="@+id/dday"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/cal_dday"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="43dp"
-                            android:text="Today"
-                            android:textSize="10dp"
-                            android:gravity="center_horizontal|center_vertical"
-                            android:textColor="@color/colorPrimary"
-                            android:fontFamily="@font/binggrae_font_family"
-                            />
-                    </FrameLayout>
-                </LinearLayout>
+                android:orientation="horizontal"
+                android:layout_marginTop="7dp">
+                <ImageView
+                    android:id="@+id/point_line2"
+                    android:layout_width="4dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/point_line_2vs2">
+                </ImageView>
                 <TextView
-                    android:id="@+id/btn_view_waiting"
+                    android:id="@+id/date"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="대기팀 보기"
-                    android:textColor="@color/colorPoint"
-                    android:layout_marginTop="4dp"
-                    android:textSize="16dp"
-                    android:layout_gravity="center_horizontal"
-                    android:fontFamily="@font/nanumgothic_font_family"/>
+                    android:layout_height="24dp"
+                    android:text="11월 23일 (토)"
+                    android:textColor="@color/colorBlack"
+                    android:layout_marginLeft="8dp"
+                    android:gravity="center_vertical"
+                    android:textSize="18dp"
+                    android:fontFamily="@font/nanumgothic_font_family">
+                </TextView>
             </LinearLayout>
-            <RelativeLayout
-                android:id="@+id/request_panel"
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/right_panel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/btn_edit_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/right_pane">
-                <LinearLayout
+                android:layout_gravity="right"
+                >
+                <ImageView
+                    android:id="@+id/icon_edit_card"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/num_of_applying"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:textSize="16dp"
-                        android:text="2팀 신청!"
-                        android:textColor="@color/colorBlack"
-                        android:fontFamily="@font/binggrae_font_family"/>
-                    <TextView
-                        android:id="@+id/btn_view_applying"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="신청팀 보기"
-                        android:textColor="@color/colorPoint"
-                        android:textSize="16dp"
-                        android:layout_alignParentBottom="true"
-                        android:fontFamily="@font/nanumgothic_font_family"/>
-                </LinearLayout>
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/profile_panel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/right_pane"
-                android:visibility="invisible">
-                <LinearLayout
+                    android:background="@drawable/icon_edit"
+                    android:layout_gravity="center_vertical"
+                    />
+                <TextView
+                    android:id="@+id/text_edit_card"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-                    <TextView
-                        android:id="@+id/tv_nickname_and_age"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:textSize="18dp"
-                        android:text="김찬열 (24)"
-                        android:textColor="@color/colorBlack"
-                        android:fontFamily="@font/nanumgothic_font_family"/>
-                    <TextView
-                        android:id="@+id/tv_belong_and_department"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="연세대학교, 전기전자공학부"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="18dp"
-                        android:layout_alignParentBottom="true"
-                        android:fontFamily="@font/nanumgothic_font_family"/>
-                </LinearLayout>
-            </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
-    <ImageView
-        android:id="@+id/point_line"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="#FF8424"
-        android:layout_alignParentBottom="true"
-        ></ImageView>
+                    android:text="미팅 수정"
+                    android:textSize="15dp"
+                    android:textColor="@color/colorNonselect"
+                    android:gravity="center_vertical"
+                    android:fontFamily="@font/nanumgothic_font_family"
+                    />
+            </LinearLayout>
+                <TextView
+                    android:id="@+id/label_matching"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="매칭 대기중!"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="27dp"
+                    android:fontFamily="@font/binggrae_font_family"/>
+        </LinearLayout>
     </RelativeLayout>
+    <FrameLayout
+        android:id="@+id/bottom_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp">
+        <Button
+            android:id="@+id/btn_view_applying"
+            android:layout_width="wrap_content"
+            android:layout_height="53dp"
+            android:layout_gravity="center_horizontal"
+            style="?android:attr/borderlessButtonStyle"
+            android:text="신청팀 보기 (2)"
+            android:textColor="@color/colorPoint"
+            android:textSize="16dp"
+            android:fontFamily="@font/nanumgothic_font_family"
+
+            >
+        </Button>
+        <LinearLayout
+            android:id="@+id/profile_panel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/tv_nickname_and_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="subbus (27)"
+                android:textSize="18dp"
+                android:fontFamily="@font/binggrae_font_family">
+            </TextView>
+            <TextView
+                android:id="@+id/tv_belong_and_department"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="연세대, 전기전자공학부"
+                android:textSize="16dp"
+                android:fontFamily="@font/binggrae_font_family">
+            </TextView>
+        </LinearLayout>
+    </FrameLayout>
 </LinearLayout>
